k8s/authorization-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-service
  template:
    metadata:
      labels:
        app: authorization-service
    spec:
      containers:
      - name: authorization-service
        image: abhinavannareddy/authorization-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5005
        readinessProbe:
          httpGet:
            path: /health
            port: 5005
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5005
          initialDelaySeconds: 10
          periodSeconds: 15
