k8s/validation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validation-service
  template:
    metadata:
      labels:
        app: validation-service
    spec:
      containers:
      - name: validation-service
        image: abhinavannareddy/validation-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5004
        readinessProbe:
          httpGet:
            path: /health
            port: 5004
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5004
          initialDelaySeconds: 10
          periodSeconds: 15
