k8s/verification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verification-service
  template:
    metadata:
      labels:
        app: verification-service
    spec:
      containers:
      - name: verification-service
        image: abhinavannareddy/verification-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5003
        readinessProbe:
          httpGet:
            path: /health
            port: 5003
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5003
          initialDelaySeconds: 10
          periodSeconds: 15
