k8s/authorization-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization-service
spec:
  selector:
    app: authorization-service
  ports:
  - port: 5005
    targetPort: 5005
  type: ClusterIP
