k8s/validation-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validation-service
spec:
  selector:
    app: validation-service
  ports:
  - port: 5004
    targetPort: 5004
  type: ClusterIP
